Bug 60904 - Application crashes when a basic library is exported from an Excel document.
Summary: Application crashes when a basic library is exported from an Excel document.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: Other Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: BSA target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-15 15:27 UTC by vatairethibault
Modified: 2014-12-20 23:11 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
xltest.xls contains a basic library named "VBAProject" that can be used to reproduce the problem. (16.50 KB, application/vnd.ms-excel)
2013-02-15 15:27 UTC, vatairethibault
Details

Note You need to log in before you can comment on or make changes to this bug.
Description vatairethibault 2013-02-15 15:27:39 UTC
Created attachment 74876 [details]
xltest.xls contains a basic library named "VBAProject" that can be used to reproduce the problem.

Open an Excel document which contains a basic library
Select Tools > Macros > Organize macros > LibreOffice basic
Click on "Organizer..." button
Go to "Libraries" tab and select the library to export
Click on "Export", select "Export as BASIC library" and export the library

LibreOffice crashes suddenly with error : 
terminate called after throwing an instance of 'com::sun::star::container::NoSuchElementException'
Comment 2 Mike §chinagl 2014-12-20 23:11:17 UTC
It's now possible to export a Basic library from an Excel document.
Comment 3 Mike §chinagl 2014-12-20 23:11:56 UTC
This bug fix comes with LibreOffice 4.4 (release notes https://wiki.documentfoundation.org/ReleaseNotes/4.4)