Resolves: fdo#60904 allow export of VBAProject

xModLibContainerExport has a "VBAProject" entry but
xDlgLibContainerExport doesn't, so just export the
one we do have

Change-Id: I15f7794904a5aff7679f2cf9fd654d741fd5cbe3